# mkdocs-git-tag-plugin

./: .gitignore  README.md  pyproject.toml  qa.sh
.github/workflows/: main.yml
ci/: qa_lint.sh
src/mkdocs_git_tag_plugin/: __init__.py  plugin.py
