[tool.poetry]
name = "mkdocs_git_tag_plugin"
version = "0.1.0"
authors = ["Erik Thorsell <erik@thorsell.io>"]
description = "mkdocs plugin for enabling git-tag injection in markdown"
license = "MIT"
readme = "README.md"
homepage = "https://thorsell.io"
repository = "https://github.com/ErikThorsell/mkdocs-git-tag-plugin"
keywords = ["mkdocs", "markdown", "git"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
mkdocs = "^1.1.2"
GitPython = "^3.1.14"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
darglint = "^1.5.3"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.5.0"
flake8-eradicate = "^0.4.0"
flake8-import-order = "^0.18.1"
flake8-pytest-style = "^1.3.0"
flake8-return = "^1.1.2"
pep8-naming = "^0.11.1"
vulture = "^2.1"

[tool.poetry.plugins."mkdocs.plugins"]
"git-tag" = "mkdocs_git_tag_plugin.plugin:GitTagPlugin"